--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "babel-eslint": "10.0.1",
+    "axios": "^1.4.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.7",
@@ -68,6 +69,7 @@
     "react-tabs": "^3.2.3",
     "react-text-loop": "^2.3.0",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^8.0.0",
     "react-tsparticles": "^1.39.3",
     "react-video-tag": "0.0.10",
     "react-visibility-sensor": "^5.1.1",
