--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "trydo",
+  "name": "zeevoc",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://trydo.rainbowit.net",
+  "homepage": "https//:zeevoc.com",
   "basename": "/",
   "dependencies": {
     "@babel/core": "7.4.3", 
