--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "basename": "/",
   "dependencies": {
-    "@babel/core": "7.4.3", 
+    "@babel/core": "7.4.3",
+    "@react-oauth/google": "^0.12.1",
     "@svgr/webpack": "4.1.0",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
-    "babel-eslint": "10.0.1",
     "axios": "^1.4.0",
+    "babel-eslint": "10.0.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.7",
@@ -25,7 +26,7 @@
     "eslint-config-react-app": "^4.0.1",
     "eslint-loader": "2.1.2",
     "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-import": "2.16.0", 
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.7.0",
@@ -55,6 +56,7 @@
     "react-countup": "^4.4.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
     "react-image-lightbox": "^5.1.4",
