--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react-app": "^9.1.2",
     "bootstrap": "^4.6.1",
     "camelcase": "^5.2.0",
+    "caniuse-lite": "^1.0.30001620",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
     "dotenv": "^6.2.0",
