--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "prismjs": "^1.29.0",
     "react": "^17.0.2",
     "react-accessible-accordion": "^3.3.5",
     "react-animate-on-scroll": "^2.1.5",
