--- a/client/package.json
+++ b/client/package.json
@@ -4,20 +4,11 @@
   "private": true,
   "basename": "/",
   "dependencies": {
-    "@babel/core": "7.4.3",
     "@react-oauth/google": "^0.12.1",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
     "axios": "^1.4.0",
-    "babel-eslint": "10.0.1",
     "dotenv": "^6.2.0",
     "emailjs-com": "^3.2.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -30,8 +21,7 @@
     "react-scroll-up": "^1.3.7",
     "react-slick": "^0.24.0",
     "react-tabs": "^3.2.3",
-    "react-toastify": "^10.0.5",
-    "webpack": "4.29.6"
+    "react-toastify": "^10.0.5"
   },
   "scripts": {
     "start": "node scripts/start.js",
