--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "latest",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.3.4",
+    "nodemailer": "^6.9.13",
     "nodemon": "latest",
     "razorpay": "^2.9.3",
     "react-scripts": "latest"
