--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,8 @@
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.6.4",
     "react-countup": "^4.4.0",
+    "react-datepicker": "^6.9.0",
+    "react-datetime": "^3.2.0",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^18.3.1",
     "react-google-login": "^5.2.2",
