--- a/client/package.json
+++ b/client/package.json
@@ -67,6 +67,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
     "react-image-lightbox": "^5.1.4",
+    "react-js-pagination": "^3.0.3",
     "react-modal-video": "^1.2.8",
     "react-parallax": "^3.3.0",
     "react-reveal": "^1.2.2",
