--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
+    "formik": "^2.4.6",
     "fs-extra": "7.0.1",
     "google-map-react": "^1.1.7",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -68,6 +69,7 @@
     "react-icons": "^3.11.0",
     "react-image-lightbox": "^5.1.4",
     "react-js-pagination": "^3.0.3",
+    "react-modal": "^3.16.1",
     "react-modal-video": "^1.2.8",
     "react-parallax": "^3.3.0",
     "react-reveal": "^1.2.2",
@@ -86,6 +88,7 @@
     "sass": "^1.50.1",
     "sass-loader": "^7.3.1",
     "semver": "6.0.0",
+    "sitemap": "^8.0.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "0.23.1",
     "ts-pnp": "1.1.2",
@@ -93,7 +96,8 @@
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "4.2.0"
+    "workbox-webpack-plugin": "4.2.0",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
